// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component tests Badge all props 1`] = `
<View
  appearance="outline"
  shape="rounded"
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "transparent",
      "borderColor": "transparent",
      "borderRadius": 4,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 4,
      "position": "relative",
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "color": "#fff",
        "fontFamily": "Arial",
        "fontSize": 16,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    ♣
  </Text>
  <Text
    accessible={false}
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "System",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
        "marginEnd": 2,
      }
    }
  >
    Badge
  </Text>
</View>
`;

exports[`Badge component tests Badge tokens 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "yellow",
      "borderColor": "#f09",
      "borderRadius": 9999,
      "borderWidth": 4,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 4,
      "position": "relative",
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    accessible={false}
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "System",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    Badge Tokens
  </Text>
</View>
`;

exports[`Badge component tests Empty Badge 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0078d4",
      "borderColor": "transparent",
      "borderRadius": 9999,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 4,
      "position": "relative",
      "right": 0,
      "width": undefined,
    }
  }
/>
`;

exports[`CounterBadge component tests CounterBadge all props 1`] = `
<View
  appearance="ghost"
  shape="rounded"
  size="large"
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "transparent",
      "borderColor": "transparent",
      "borderRadius": 4,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "paddingHorizontal": 4,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "color": "#fff",
        "fontFamily": "Arial",
        "fontSize": 16,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    ♣
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "System",
        "fontSize": 13,
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    30
  </Text>
</View>
`;

exports[`CounterBadge component tests CounterBadge shows 99+ 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0078d4",
      "borderColor": "transparent",
      "borderRadius": 9999,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "paddingHorizontal": 4,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "System",
        "fontSize": 13,
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    99+
  </Text>
</View>
`;

exports[`CounterBadge component tests CounterBadge shows 1000+ 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0078d4",
      "borderColor": "transparent",
      "borderRadius": 9999,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "paddingHorizontal": 4,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "System",
        "fontSize": 13,
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    1000+
  </Text>
</View>
`;

exports[`CounterBadge component tests CounterBadge shows zero 1`] = `
<View
  showZero={true}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0078d4",
      "borderColor": "transparent",
      "borderRadius": 9999,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "paddingHorizontal": 4,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "System",
        "fontSize": 13,
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    0
  </Text>
</View>
`;

exports[`CounterBadge component tests CounterBadge tokens 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "yellow",
      "borderColor": "#f09",
      "borderRadius": 9999,
      "borderWidth": 4,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "paddingHorizontal": 4,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "System",
        "fontSize": 13,
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": undefined,
        "lineHeight": undefined,
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    70
  </Text>
</View>
`;

exports[`CounterBadge component tests Empty Badge 1`] = `null`;

exports[`PresenceBadge component tests PresenceBadge props 1`] = `
<View
  accessible={true}
  iconPosition="before"
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "aspectRatio": 1,
      "backgroundColor": "#ffffff",
      "borderColor": "#ffffff",
      "borderRadius": 9999,
      "borderWidth": 2,
      "bottom": -2,
      "flexDirection": "row",
      "height": 24,
      "justifyContent": "center",
      "paddingHorizontal": 4,
      "position": "relative",
      "right": -2,
      "width": 24,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={20}
    bbWidth={20}
    color={4279476494}
    fill="none"
    focusable={false}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "aspectRatio": 1,
          "color": "#13a10e",
          "height": 20,
          "width": 20,
        },
        Object {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    tintColor={4279476494}
    vbHeight={16}
    vbWidth={16}
  >
    <RNSVGGroup
      fill={null}
      propList={
        Array [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M11.7 6.7a1 1 0 00-1.4-1.4L7 8.58l-1.3-1.3a1 1 0 00-1.4 1.42l2 2a1 1 0 001.4 0l4-4zM0 8a8 8 0 1116 0A8 8 0 010 8zm8-6a6 6 0 100 12A6 6 0 008 2z"
        fill={
          Array [
            2,
          ]
        }
        propList={
          Array [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
